source/nginx-dep-3-rep-enhanced.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-enhanced
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-enhanced
  template:
    metadata:
      labels:
        app: nginx-enhanched
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-conf-enh
