source/strongswan-client-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipsec-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strongswan
  template:
    metadata:
      labels:
        app: strongswan
    spec:
      hostNetwork: true
      containers:
      - name: strongswan
        image: ubuntu:latest
        command: ["/bin/sh"]
        args: ["-c", "apt-get update && \
         apt-get install -y strongswan && \
         cp /etc/ipsec.conf-tmp /etc/ipsec.conf && \
         cp /etc/ipsec.secrets-tmp /etc/ipsec.secrets && \
         cp /etc/strongswan.conf-tmp /etc/strongswan.conf && \
         ipsec start && \
         tail -f /dev/null"]
        securityContext:
          privileged: true
          runAsUser: 0
          runAsGroup: 0
        ports:
          - containerPort: 500
            name: vpn-isakmp
            protocol: UDP
          - containerPort: 4500
            name: vpn-ike
            protocol: UDP
        volumeMounts:
        - mountPath: /etc/ipsec.conf-tmp
          name: config
          subPath: ipsec.conf
        - mountPath: /etc/ipsec.secrets-tmp
          name: config
          subPath: ipsec.secrets
        - mountPath: /etc/strongswan.conf-tmp
          name: config
          subPath: strongswan.conf
      volumes:
      - configMap:
          items:
          - key: ipsec.conf
            path: ipsec.conf
          - key: ipsec.secrets
            path: ipsec.secrets
          - key: strongswan.conf
            path: strongswan.conf
          name: ipsec-config
        name: config
      restartPolicy: Always
