source/strongswan-install copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strongswan-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strongswan
  template:
    metadata:
      labels:
        app: strongswan
    spec:
      hostNetwork: true
      containers:
      - name: strongswan
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        image: alpine:edge
        command: ["/usr/sbin/ipsec"]
        args: ["start", "--nofork"]
        volumeMounts:
        - name: strongswan-bin
          mountPath: /usr/sbin
        - name: strongswan-lib
          mountPath: /usr/lib
        - name: strongswan-config
          mountPath: /etc
        ports:
        - containerPort: 500
          protocol: UDP
        - containerPort: 4500
          protocol: UDP
      volumes:
      - name: strongswan-bin
        emptyDir: {}
      - name: strongswan-lib
        emptyDir: {}
      - name: strongswan-config
        configMap:
          name: strongswan-config
