source/strongswan-install.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: strongswan-deployment
spec:
  replicas: 1
  serviceName: vpn
  selector:
    matchLabels:
      app: strongswan
  template:
    metadata:
      labels:
        app: strongswan
    spec:
      hostNetwork: true
      containers:
      - name: strongswan
        image: ubuntu:latest
        command: ["/bin/sh"]
        args: ["-c", "apt-get update && apt-get install -y strongswan && tail -f /dev/null"]
        securityContext:
          privileged: true
          runAsUser: 0
          runAsGroup: 0
        ports:
          - containerPort: 500
            name: vpn-isakmp
            protocol: UDP
          - containerPort: 4500
            name: vpn-ike
            protocol: UDP
        volumeMounts:
        - mountPath: /etc/ipsec.conf
          name: config
          subPath: ipsec.conf
        - mountPath: /etc/ipsec.secrets
          name: config
          subPath: ipsec.secrets
        - mountPath: /etc/strongswan.conf
          name: config
          subPath: strongswan.conf
      volumes:
      - configMap:
          items:
          - key: strongswan.conf
            path: strongswan.conf
          - key: ipsec.conf
            path: ipsec.conf
          - key: ipsec.secrets
            path: ipsec.secrets
          name: ipsec-config
        name: config
      restartPolicy: Always
