source/test-pod-vm1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-vm1
  namespace: default
spec:
  containers:
  - command:
    - sleep
    - infinity
    image: nicolaka/netshoot
    name: test-pod-vm1
  nodeName: vm1
