source/nginx-kick.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kickass-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kickass-nginx
  template:
    metadata:
      labels:
        app: kickass-nginx
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-config
      restartPolicy: Always
      volumes:
      - emptyDir: {}
        name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: kickass-svc
spec:
  selector:
    app: kickass-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  type: LoadBalancer
  loadBalancerIP: 10.123.123.100
