source/nginx-mlb-2-vips-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-mlb-l2-zone1
  annotations:
    metallb.universe.tf/address-pool: external-pool-zone1
spec:
  selector:
    app: nginx-zone1
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-mlb-l2-zone2
  annotations:
    metallb.universe.tf/address-pool: external-pool-zone2
spec:
  selector:
    app: nginx-zone2
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-zone1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-zone1
  template:
    metadata:
      labels:
        app: nginx-zone1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-conf-inspect
      nodeSelector:
        zone: "zone1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-zone2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-zone2
  template:
    metadata:
      labels:
        app: nginx-zone2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-conf-inspect
      nodeSelector:
        zone: "zone2"
---
