source/nginx-mlb-2-vips.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-mlb-l2-fate1
  annotations:
    metallb.universe.tf/address-pool: external-pool
spec:
  selector:
    app: nginx-fate1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 10.123.123.201
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-mlb-l2-fate2
  annotations:
    metallb.universe.tf/address-pool: external-pool
spec:
  selector:
    app: nginx-fate2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 10.123.123.202
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-fate1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-fate1
  template:
    metadata:
      labels:
        app: nginx-fate1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-conf-inspect
      nodeSelector:
        fate: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-fate2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-fate2
  template:
    metadata:
      labels:
        app: nginx-fate2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-conf-inspect
      nodeSelector:
        fate: "2"
---
