source/nginx-mlb-svc-hostnetwork.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-mlb-l2-hostnet
  annotations:
    metallb.universe.tf/address-pool: external-pool
spec:
  selector:
    app: nginx-lbl2-hostnet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 10.123.123.102
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lbl2-hostnet
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-lbl2-hostnet
  template:
    metadata:
      labels:
        app: nginx-lbl2-hostnet
    spec:
      hostNetwork: true
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-conf
