source/nginx-mlb-svc-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-mlb-l2-service
  annotations:
    metallb.universe.tf/address-pool: external-pool
spec:
  externalTrafficPolicy: Local
  selector:
    app: nginx-lbl2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 10.123.123.100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lbl2
spec:
  replicas: 6
  selector:
    matchLabels:
      app: nginx-lbl2
  template:
    metadata:
      labels:
        app: nginx-lbl2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-conf
