source/nginx-mlb-svc-rhocp.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: external-pool
  name: nginx-mlb-l2-service
spec:
  allocateLoadBalancerNodePorts: true
  selector:
    app: nginx-lbl2
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 10.131.2.14
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lbl2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-lbl2
  template:
    metadata:
      labels:
        app: nginx-lbl2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-conf
