source/sctp-mlb-svc-vip1234.yaml
apiVersion: v1
kind: Service
metadata:
  name: sctp-server-vip1234
  annotations:
    metallb.universe.tf/address-pool: sctp-external-pool
spec:
  externalTrafficPolicy: Cluster
  selector:
    app: sctp-server-ipsec
  ports:
  - protocol: SCTP
    port: 10000
    targetPort: 9999
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sctp-server
  labels:
    app: sctp-server-ipsec
spec:
  replicas: 6
  selector:
    matchLabels:
      app: sctp-server-ipsec
  template:
    metadata:
      labels:
        app: sctp-server-ipsec
    spec:
      containers:
      - name: sctp-server
        image: ubuntu:20.04
        command: ["/bin/bash", "-c", "apt-get update && apt-get install -y lksctp-tools && echo 'Starting SCTP server on port 9999' && sctp_test -H 0.0.0.0 -P 9999 -l"]
        ports:
        - containerPort: 9999
          protocol: SCTP
---
