source/sctp-mlb-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sctp-server
  labels:
    app: sctp-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sctp-server
  template:
    metadata:
      labels:
        app: sctp-server
    spec:
      containers:
      - name: sctp-server
        image: ubuntu:20.04
        command: ["/bin/bash", "-c", "apt-get update && apt-get install -y lksctp-tools && echo 'Starting SCTP server on port 9999' && sctp_test -H 0.0.0.0 -P 9999 -l"]
        ports:
        - containerPort: 9999
          protocol: SCTP
---
apiVersion: v1
kind: Service
metadata:
  name: sctp-server
  annotations:
    metallb.universe.tf/address-pool: external-pool
spec:
  selector:
    app: sctp-server
  ports:
  - protocol: SCTP
    port: 10000
    targetPort: 9999
  type: LoadBalancer
  loadBalancerIP: 10.123.123.101
