source/sctpserver-with-ipsec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sctpserver-ipsec-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sctpserver-with-ipsec
  template:
    metadata:
      labels:
        app: sctpserver-with-ipsec
    spec:
      containers:
      - name: strongswan
        image: ubuntu:22.04
        command: ["/bin/sh"]
        args: ["/start.sh"]
        securityContext:
          privileged: true
          runAsUser: 0
          runAsGroup: 0
        ports:
          - containerPort: 500
            name: vpn-isakmp
            protocol: UDP
          - containerPort: 4500
            name: vpn-ike
            protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /start.sh
          subPath: start.sh
          readOnly: true
        - name: config
          mountPath: /etc/swanctl/swanctl.conf-tmp
          subPath: swanctl.conf
        - name: config
          mountPath: /etc/strongswan.conf-tmp
          subPath: strongswan.conf
      - name: sctp-server
        image: ubuntu:22.04
        command: ["/bin/bash", "-c", "apt-get update && apt-get install -y lksctp-tools && echo 'Starting SCTP server on port 9999' && sctp_test -H 0.0.0.0 -P 9999 -l"]
        ports:
          - containerPort: 9999
            protocol: SCTP
      volumes:
      - name: config
        configMap:
          name: ipsec-config
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ipsec-vip
  annotations:
    metallb.universe.tf/address-pool: ipsec-external-pool
spec:
  externalTrafficPolicy: Local
  selector: 
    app: sctpserver-with-ipsec
  ports:
  - name: vpn-isakmp
    protocol: UDP
    port: 500
    targetPort: 500
  - name: vpn-ike-esp-nat-t
    protocol: UDP
    port: 4500
    targetPort: 4500
  type: LoadBalancer
---
