source/strongswan-daemonset-new.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ipsec-ds
spec:
  selector:
    matchLabels:
      app: strongswan
  template:
    metadata:
      labels:
        app: strongswan
    spec:
      hostNetwork: true
      containers:
      - name: strongswan
        image: ubuntu:latest
        command: ["/bin/sh"]
        args: ["-c", "apt-get update && \
         apt-get install -y strongswan && \
         cp /etc/swanctl/swanctl.conf-tmp /etc/swanctl/swanctl.conf && \
         cp /etc/strongswan.conf-tmp /etc/strongswan.conf && \
         ipsec start && \
         tail -f /dev/null"]
        securityContext:
          privileged: true
          runAsUser: 0
          runAsGroup: 0
        ports:
          - containerPort: 500
            name: vpn-isakmp
            protocol: UDP
          - containerPort: 4500
            name: vpn-ike
            protocol: UDP
        volumeMounts:
        - mountPath: /etc/swanctl/swanctl.conf-tmp
          name: config
          subPath: swanctl.conf
        - mountPath: /etc/strongswan.conf-tmp
          name: config
          subPath: strongswan.conf
      volumes:
      - configMap:
          items:
          - key: swanctl.conf
            path: swanctl.conf
          - key: strongswan.conf
            path: strongswan.conf
          name: ipsec-config
        name: config
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ipsec-vip
  annotations:
    metallb.universe.tf/address-pool: ipsec-external-pool
spec:
  externalTrafficPolicy: Local
  selector: 
    app: strongswan
  ports:
  - name: vpn-isakmp
    protocol: UDP
    port: 500
    targetPort: 500
  - name: vpn-ike-esp-nat-t
    protocol: UDP
    port: 4500
    targetPort: 4500
  type: LoadBalancer
---
