source/strongswan-daemonset-route-based-vpn-test.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ipsec-ds
spec:
  selector:
    matchLabels:
      app: strongswan
  template:
    metadata:
      labels:
        app: strongswan
    spec:
      hostNetwork: true
      containers:
      - name: strongswan
        image: ubuntu:latest
        command: ["/bin/sh"]
        args: ["/start.sh"]
        securityContext:
          privileged: true
          runAsUser: 0
          runAsGroup: 0
        ports:
          - containerPort: 500
            name: vpn-isakmp
            protocol: UDP
          - containerPort: 4500
            name: vpn-ike
            protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /start.sh
          subPath: start.sh
          readOnly: true
        - name: config
          mountPath: /etc/swanctl/swanctl.conf-tmp
          subPath: swanctl.conf
        - name: config
          mountPath: /etc/strongswan.conf-tmp
          subPath: strongswan.conf
      volumes:
      - name: config
        configMap:
          name: ipsec-config
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: ipsec-vip
  annotations:
    metallb.universe.tf/address-pool: ipsec-external-pool
spec:
  externalTrafficPolicy: Local
  selector: 
    app: strongswan
  ports:
  - name: vpn-isakmp
    protocol: UDP
    port: 500
    targetPort: 500
  - name: vpn-ike-esp-nat-t
    protocol: UDP
    port: 4500
    targetPort: 4500
  type: LoadBalancer
---
