source/test-NOT-READY-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: never-ready
  labels:
    app: fail
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    readinessProbe:
      exec:
        command: ["false"]  # Always fails
      initialDelaySeconds: 1
      periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: never-ready-svc
  annotations:
    metallb.universe.tf/address-pool: external-pool
spec:
  selector:
    app: fail
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
  loadBalancerIP: 10.123.123.99
