source/test-READY-to-NOT-READY-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-after-2m
  labels:
    app: fail
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "sleep 120 && touch /tmp/fail && sleep infinity"]
    readinessProbe:
      exec:
        command: ["sh", "-c", "[ ! -f /tmp/fail ]"]  # Probe fails after 2 minutes
      initialDelaySeconds: 0
      periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: fail-after-2m-svc
  annotations:
    metallb.universe.tf/address-pool: external-pool
spec:
  selector:
    app: fail
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
  loadBalancerIP: 10.123.123.99
